--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,12 +15,14 @@
   border: 1px solid #eee;
   border-radius: 16px;
   background: #fafafa;
+  text-align: left;
 }
 
 .hero h3 {
   font-size: 2.2rem;
   margin: 0 0 0.6rem 0;
   letter-spacing: -0.02em;
+  line-height: 1.1;
 }
 
 .hero strong {
